# shot-master

./: .env.example  .gitignore  README.md  check_agent.py  pyproject.toml  requirements.txt  run.bat  run.sh  web_app.py  web_demo.py  需求.md
app/: config.py  grid_ops.py  main.py
app/api/: batch.py  border_trim.py  files.py  grid_combine.py  grid_split.py  inference.py  settings.py  templates.py
app/core/: output_writer.py  video_timeline_model.py
app/providers/: __init__.py  anthropic.py  base.py  comfyui_upscaler.py  factory.py  gemini.py  openai_compat.py  qwen_vl.py  runninghub.py
app/templates/: ltx_director_v23.json
app/ui/: geometry.py  main_window.py  preview_dialog.py  state.py  thumbnail_grid.py  worker.py
docs/explorer/: 3c-overlay-track-layout-confirm.html  3d-framing-generate-interaction-confirm.html  GUI迁移差距报告.md  P6阶段计划-前后端联动修复.md  PySide6退役就绪评估与门控计划.md  ai-chat-panel-layout.html  asset-library-confirm.html  code-review-dub-soundtrack.md  comfyui-workflow-node-mappings.md  dub-mode1-freeform-layout-confirm.html  ideate-genre-style-confirm.html  imggen-panel-layout-confirm.html  项目文件规范.md  (+15 more)
drama_shot_master/: config.py  grid_ops.py  main.py
license_admin/: admin_gui.py  issuer.py  keygen.py
market_intelligence/: __init__.py  __main__.py  analyzer.py  config.py  database.py  server.py
media_agent/: __init__.py  config.py  export_openapi.py  server.py
screenwriter_agent/: __init__.py  __main__.py  config.py  server.py
scripts/: ping_doubao.py  ping_runninghub.py  ping_runninghub_query.py
sound_track_agent/: accent_detector.py  accent_mixer.py  audio_cache.py  audio_mixer.py  batch_generator.py  beat_aligner.py  bgm_assembler.py  cli.py  directive_composer.py  emotion_tagger.py  facade.py  mixdown.py  music_generator.py  overlay_gen.py  overlay_prompt.py  overlay_session.py  pipeline.py  prompt_composer.py  provider.py  refine.py  scorer.py  segment_planner.py  session.py  shot_detector.py  stages_factory.py
templates/: four_frame.md  ltx_refine_meta_prompt.md  multi_frame_adaptive.md  single_frame.md  three_frame.md
tests/: conftest.py  test_build_config.py  test_config.py  test_e2e_smoke.py  test_genre_templates.py  test_geometry.py  test_grid_ops.py  test_output_writer.py  test_result_parser.py  test_state.py  test_style_bible.py  test_task_runner.py  test_template_engine.py  test_web_app.py  测试文档.docx
web/: app.html  app.js  asset-library.html  compose.html  daw-soundtrack.html  dub-mode2.html  ideate.html  index.html  market-analysis.html  overview.html  project-center.html  prompts.html  script.html  settings.html  skills.html  splash.html  split-tool.html  storyboard-board.html  storyboard-script.html  styles.css  tokens.css  video-mode2.html  view.html  welcome.html
(+748 files in other folders)
