[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drama-shot-master"
version = "0.7.0"
description = "短剧分镜工作台桌面应用：提示词反推 / 图像 ops / LTX 2.3 视频生成（PySide6）"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.30",
    "cryptography>=42",
    "dashscope>=1.17",
    "fastapi>=0.110",
    "google-genai>=0.3",
    "httpx>=0.27",
    "json5>=0.9",
    "numpy>=1.24",
    "openai>=1.30",
    "Pillow>=10.0",
    "pydantic>=2.5",
    "PySide6>=6.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "soundfile>=0.12",
    "tencentcloud-sdk-python-tmt>=3.0.1207,<4.0.0",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
drama-shot-master = "drama_shot_master.main:main"

[tool.setuptools.packages.find]
include = ["drama_shot_master*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
